[metadata]
version = attr: things.__version__

[pycodestyle]
max_line_length = 88
ignore = E501,E203,W503

[pydocstyle]
ignore = D102,D212,D213,D413,D203,D409,D405,D406,D407

[flake8]
max-line-length = 88
max-complexity = 10
ignore = E501,E203,W503

[pylama]
ignore = E501,E203,W503

[isort]
lines_after_imports = 2
force_sort_within_sections = True

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
